--- a/crawler-rs/Cargo.toml
+++ b/crawler-rs/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2021"
 chrono = "0.4.38"
 console = "0.15.8"
 headless_chrome = { version = "1.0.15", features = ["fetch"] }
+md5 = "0.7.0"
+publicsuffix = "2.3.0"
+rand = "0.8.5"
+regex = "1.11.1"
+reqwest = { version = "0.12.9", features = ["rustls-tls"] }
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
+tokio = { version = "1.41.1", features = ["full"] }
+url = "2.5.4"
