--- a/crawler-rs/Cargo.toml
+++ b/crawler-rs/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
+clap = "4.5.21"
 console = "0.15.8"
 headless_chrome = { version = "1.0.15", features = ["fetch"] }
 md5 = "0.7.0"
+mockito = "1.6.1"
 publicsuffix = "2.3.0"
 rand = "0.8.5"
 regex = "1.11.1"
